[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11~=2.4.3",
    "cmake>=3.18",
    "scikit-build",
    "poetry-core>=1.0.0"
]
build-backend = "poetry.core.masonry.api"

[project]
name = "mtgml"
authors = [{name = "Devon Richards (ruler501)", email = "admin@cubeartisan.net"}]
readme = "README.md"
dynamic = ["version", "description"]
classifiers=[
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10"
]

[project.scripts]
train_combined = "mtgml.training.train_combined"

[project.urls]
Home = "https://github.com/CubeArtisan/mtgml"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
version_files = [
    "pyproject.toml:version"
]
tag_format = "v$version"
changelog_incremental = true
changelog_start_rev = "v1.0.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.poetry]
name = "MtgML"
version = "1.0.0"
description = ""
authors = ["Devon Richards (ruler501) <admin@cubeartisan.net>"]

[tool.poetry.dependencies]
python = "~3.10"
dvc = {extras = ["gs"], version = "^2.24.0"}
Flask = "^2.2.2"
google-cloud-monitoring = "^2.11.1"
jsonslicer = "^0.1.7"
numpy = "^1.23.2"
opentelemetry-exporter-gcp-trace = "^1.3.0"
opentelemetry-instrumentation-flask = "^0.33b0"
opentelemetry-propagator-gcp = "^1.3.0"
opentelemetry-resourcedetector-gcp = "^1.3.0-alpha.0"
pip = "^22.2.2"
pybind11 = "^2.10.0"
PyYAML = "^6.0"
scikit-build = "^0.15.0"
tqdm = "^4.64.0"
zstandard = "^0.18.0"
gunicorn = {extras = ["gevent"], version = "^20.1.0"}
tf-nightly = "^2.12.0.dev20221204"
tb-nightly = "^2.12.0a20221205"
tfa-nightly = "^0.19.0.dev20221011203729"
typing-extensions = "^4.5.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
commitizen = "^2.32.1"
flake8 = "^5.0.4"
flake8-absolute-import = "^1.0.0"
flake8-black = "^0.3.3"
flake8-builtins = "^1.5.3"
flake8-encodings = "^0.5.0"
flake8-eradicate = "^1.3.0"
flake8-expression-complexity = "^0.0.11"
flake8-isort = "^4.2.0"
flake8-nb = "^0.5.2"
flake8-noqa = "^1.2.9"
flake8-quotes = "^3.3.1"
flake8-unused-arguments = "^0.0.11"
flake8-use-fstring = "^1.4"
flake8-use-pathlib = "^0.3.0"
flake8-warnings = "^0.2.1"
pre-commit = "^2.20.0"
tensor-annotations-tensorflow-stubs = "^1.0.0"
hypertools = "^0.8.0"
plotly = "^5.10.0"
pandas = "^1.5.0"

[tool.poetry.group.testing.dependencies]
pandas = "^1.5.3"

