[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11~=2.4.3",
    "cmake>=3.18",
    "scikit-build",
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[project]
name = "mtgml"
authors = [
    { name = "Devon Richards (ruler501)", email = "admin@cubeartisan.net" },
]
readme = "README.md"
dynamic = ["version", "description"]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
train_combined = "mtgml.training.train_combined"

[project.urls]
Home = "https://github.com/CubeArtisan/mtgml"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
version_files = ["pyproject.toml:version"]
tag_format = "v$version"
changelog_incremental = true
changelog_start_rev = "v1.0.0"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.flake8]
ignore = ["E203", "PL123", "U101", "W503"]
max-line-length = 120
max-complexity = 12
inline-quotes = "double"
known-modules = ":[mtgml]"
application-names = "mtgml"
max-expression-complexity = 8

[tool.isort]
profile = "black"

[tool.poetry]
name = "MtgML"
version = "1.0.0"
description = ""
authors = ["Devon Richards (ruler501) <admin@cubeartisan.net>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
jsonslicer = "^0.1.7"
numpy = "^1.23.2"
pybind11 = "^2.10.0"
PyYAML = "^6.0"
scikit-build = "^0.15.0"
tqdm = "^4.64.0"
tensorflow = "^2.12.0"
tensorboard = "^2.12.0"
pandas = "^1.5.3"
pyarrow = "^11.0.0"
zstandard = "^0.20.0"
tensorflow-probability = "^0.20.1"
typeguard = "^4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
commitizen = "^2.32.1"
flake8 = "^5.0.4"
flake8-absolute-import = "^1.0.0"
flake8-black = "^0.3.3"
flake8-builtins = "^1.5.3"
flake8-encodings = "^0.5.0"
flake8-eradicate = "^1.3.0"
flake8-expression-complexity = "^0.0.11"
flake8-isort = "^4.2.0"
flake8-nb = "^0.5.2"
flake8-noqa = "^1.2.9"
flake8-quotes = "^3.3.1"
flake8-unused-arguments = "^0.0.11"
flake8-use-fstring = "^1.4"
flake8-use-pathlib = "^0.3.0"
flake8-warnings = "^0.2.1"
pre-commit = "^2.20.0"
tensor-annotations-tensorflow-stubs = "^1.0.0"
typing-extensions = "^4.5.0"
plotly = "^5.14.1"
matplotlib = "^3.7.1"

[tool.poetry.group.serving.dependencies]
Flask = "^2.2.2"
google-cloud-monitoring = "^2.11.1"
opentelemetry-exporter-gcp-trace = "^1.3.0"
opentelemetry-instrumentation-flask = "^0.33b0"
opentelemetry-propagator-gcp = "^1.3.0"
opentelemetry-resourcedetector-gcp = "^1.3.0-alpha.0"
gunicorn = { extras = ["gevent"], version = "^20.1.0" }

[tool.poetry.group.tflite]
optional = true

[tool.poetry.group.tflite.dependencies]
tflite-runtime = "^2.13.0"

[tool.pyright]
venvPath = "./"
venv = ".venv"
exclude = ["**/__pycache__"]
include = ["mtgml"]
reportMissingImports = true
reportMissingTypeStubs = true
pythonVersion = "3.11"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
